--- a/home.css
+++ b/home.css
@@ -1,3 +1,24 @@
 .title {
     color: green;
 }
+
+header {
+    text-align: center;
+    padding: 10px;
+}
+
+header nav {
+    display: flex;
+    justify-content: center;
+}
+
+header nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+header nav ul li {
+    margin-right: 100px;
+}
